--- a/package.json
+++ b/package.json
@@ -74,12 +74,15 @@
 		]
 	},
 	"dependencies": {
-		"react-router-dom": "^5.2.0",
+		"@emotion/react": "^11.10.0",
+		"@emotion/styled": "^11.10.0",
+		"@mui/material": "^5.9.3",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-polyfills": "0.0.1",
-		"react-router": "^6.0.2"
+		"react-router": "^6.0.2",
+		"react-router-dom": "^5.2.0"
 	}
 }
