--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
 	"dependencies": {
 		"@emotion/react": "^11.10.0",
 		"@emotion/styled": "^11.10.0",
-		"@mui/material": "^5.9.3",
+		"@mui/icons-material": "^5.8.4",
+		"@mui/material": "^5.10.0",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^17.0.2",
